[package]
name = "rswatch"
version = "0.1.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A program for monitoring files and directories and executing command on change"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcli = "0.3.7"
ctrlc = "3.1.4"